add Matrix3X3 and triangle

--- a/renderPage.html
+++ b/renderPage.html
@@ -4,6 +4,6 @@
 	<script data-main="js/app.js" src="./js/lib/require.js"></script>
 </head>
 <body>
-	<canvas id="canvas"></canvas>
+	<canvas id="canvas" width="500px" height="500px"></canvas>
 </body>
 </html>
